--- a/cuentas/src/main/resources/application.properties
+++ b/cuentas/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+#config mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/cuentas_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#tema oscuro
+joinfaces.primefaces.theme=vela
